# tinyprof

./: CMakeLists.txt  README.md  run.sh  tinyprof.cpp
test/: even-fibonacci.cpp  foo.cpp  hello-world.cpp  nth-prime-sieve.cpp  tinyprof.h
